ggplot2 1.0.1.9000
----------------------------------------------------------------

* `facet_wrap()` more carefully checks its `nrow` and `ncol` arguments
  to ensure that they're specified correctly (@richierocks, #962)

* Improved the calculation of segments needed to draw the curve representing
  a line when plotted in polar coordinates. In some cases, the last segment
  of a multi-segment line was not drawn (@BrianDiggs, #952)

* All datasets have class `tbl_df` so if you also use dplyr, you won't
  accidentally print all the data. `economics` has been brought up to date to
  2015-04-01.

* All instances of partial matched dollar expressions were removed (@jimhester,
  #1134)

* `geom_text()` gains `nudge_x` and `nudge_y` arguments to offset labels from
  the x & y position (#1120). `check_overlap = TRUE` provides a simple
  resolution to label overplotting (#1039). `hjust` and `vjust` can now
  be character vectors: "left", "center", "right", "bottom", "middle", "top".
  New options include "inward" and "outward" which align text towards and
  away from the center of the plot respectively.

* `geom_crossbar()` sets grouping correctly so you can display multiple
  crossbars on one plot. It also makes the default `fatten` argument a little
  bigger to make the middle line more obvious (#1125).

* `guide_colorbar()` no longer fails when the legend is empty - previously
  this often masked misspecifications elsewhere in the plot (#967)

* `Geom`, `Stat` and `Position` are now exported, making it easier to create
  new geoms, stats and positions in other packages (#989).

* New `theme_void()`, which is completely empty. Useful for plots with non
  standard coordinates or for producing numerical drawings with R. (@jiho, #976)

* New `geom_curve()` that adds curved lines, similar to `geom_segment()`.
  (@veraanadi, #1088)

* Create correct legend for continuous color even if there is only one color
  (@krlmlr, #943)
