@@ -89,6 +89,7 @@ S3method(fortify,summary.glht)
 S3method(ggplot,data.frame)
 S3method(ggplot,default)
 S3method(grid.draw,absoluteGrob)
+S3method(grid.draw,ggplot)
 S3method(grobHeight,absoluteGrob)
 S3method(grobHeight,zeroGrob)
 S3method(grobWidth,absoluteGrob)
